--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,9 @@ android {
 }
 
 dependencies {
-
-
+    //necessary for glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    //needed for retrofit
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
